--- a/events.html
+++ b/events.html
@@ -177,14 +177,14 @@
                 <div class="modal-body">
                     <div class="icon-container1 d-flex">
                     <div class="smd">
-                      <a href="https://twitter.com/share?https://au-programme.netlify.app" target="_blank">
+                      <a href="https://twitter.com/share?https://au-programme.netlify.app/events.html" target="_blank">
                           <i class=" img-thumbnail fab fa-twitter fa-2x"
                               style="color:#4c6ef5;background-color: aliceblue"></i>
                           <p>Twitter</p>              
                       </a>
                     </div>
                     <div class="smd">
-                        <a href="https://www.facebook.com/sharer.php?https://au-programme.netlify.app" target="_blank">                        
+                        <a href="https://www.facebook.com/sharer.php?https://au-programme.netlify.app/events.html" target="_blank">                        
                             <i class="img-thumbnail fab fa-facebook fa-2x"
                                 style="color: #3b5998;background-color: #eceff5;"></i>
                             <p>Facebook</p>                      
@@ -194,14 +194,14 @@
 
                     <div class="icon-container2 d-flex">
                       <div class="smd">
-                      <a href="whatsapp://send?https://au-programme.netlify.app" data-action="share/whatsapp/share" target="_blank">                      
+                      <a href="whatsapp://send?https://au-programme.netlify.app/events.html" data-action="share/whatsapp/share" target="_blank">                      
                           <i class="img-thumbnail fab fa-whatsapp fa-2x"
                               style="color:  #25D366;background-color: #cef5dc;"></i>
                           <p>Whatsapp</p>  
                       </a>
                     </div> 
                     <div class="smd">
-                        <a href="https://www.linkedin.com/shareArticle?https://au-programme.netlify.app" target="_blank">
+                        <a href="https://www.linkedin.com/shareArticle?https://au-programme.netlify.app/events.html" target="_blank">
                           
                             <i class="img-thumbnail fab fa-linkedin fa-2x"
                                 style="color:  #4c6ef5;background-color: aliceblue"></i>
