--- a/index.html
+++ b/index.html
@@ -730,13 +730,13 @@
 
     // Your web app's Firebase configuration
     const firebaseConfig = {
-      apiKey: "AIzaSyBgXAoquFpq6S4ThjP-_sNRg5TRif7BqTo",
-        authDomain: "becare-e39ac.firebaseapp.com",
-        databaseURL: "https://becare-e39ac-default-rtdb.firebaseio.com",
-        projectId: "becare-e39ac",
-        storageBucket: "becare-e39ac.appspot.com",
-        messagingSenderId: "111120253032",
-        appId: "1:111120253032:web:023f6584868cf57d6cbbdd"
+      apiKey: "AIzaSyDNv561jOOEoLeB0tbWRLz2NKq-Vf31x0s",
+    authDomain: "o-programme.firebaseapp.com",
+    databaseURL: "https://o-programme-default-rtdb.firebaseio.com",
+    projectId: "o-programme",
+    storageBucket: "o-programme.appspot.com",
+    messagingSenderId: "327173970134",
+    appId: "1:327173970134:web:c40a53b5500d1adaa11177"
     };
 
     // Initialize Firebase
