--- a/admin/admin.html
+++ b/admin/admin.html
@@ -281,7 +281,7 @@
                             
                         </div>
                         <div class="card-footer border-0 mb-7">
-                            <span class="text-muted text-sm">Votre répertoire des produits.</span>
+                            <span class="text-muted text-sm">Votre répertoire des évènements.</span>
                         </div>
                     </div>
                 </div>
@@ -354,13 +354,13 @@
 
         // Your web app's Firebase configuration
         const firebaseConfig = {
-        apiKey: "AIzaSyBgXAoquFpq6S4ThjP-_sNRg5TRif7BqTo",
-        authDomain: "becare-e39ac.firebaseapp.com",
-        databaseURL: "https://becare-e39ac-default-rtdb.firebaseio.com",
-        projectId: "becare-e39ac",
-        storageBucket: "becare-e39ac.appspot.com",
-        messagingSenderId: "111120253032",
-        appId: "1:111120253032:web:023f6584868cf57d6cbbdd"
+            apiKey: "AIzaSyDNv561jOOEoLeB0tbWRLz2NKq-Vf31x0s",
+            authDomain: "o-programme.firebaseapp.com",
+            databaseURL: "https://o-programme-default-rtdb.firebaseio.com",
+            projectId: "o-programme",
+            storageBucket: "o-programme.appspot.com",
+            messagingSenderId: "327173970134",
+            appId: "1:327173970134:web:c40a53b5500d1adaa11177"
         };
 
         // Initialize Firebase
@@ -668,7 +668,7 @@
                                     <div style = "display: flex; justify-content: center; margin: auto;">
                                     <img src="./../assets/img/no_data.svg" alt="" style = "width: 100%; height: 20vh;">
                                     </div> 
-                                    <p style="text-align: center;">Vous n'avez pas encore de produit.</p>
+                                    <p style="text-align: center;">Vous n'avez pas encore d'événements.</p>
                                     `
                 }
 
