--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto active" href="#home">Accueil</a></li>
-          <li><a class="nav-link scrollto" href="#about">À propos</a></li>
+          <li><a class="nav-link scrollto" href="#apropos">À propos</a></li>
           <li><a class="nav-link scrollto " href="events.html">Événement</a></li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
           <li><a class="getstarted scrollto" href="#features">Commencer</a></li>
@@ -60,11 +60,11 @@
     <div class="container-fluid" data-aos="fade-up">
       <div class="row justify-content-center">
         <div class="col-xl-5 col-lg-6 pt-3 pt-lg-0 order-2 order-lg-1 d-flex flex-column justify-content-center">
-          <h1>Meilleur endroit pour trouver des événements au Bénin.</h1>
-          <h2>Facilité l'achat de billets pour divers événements (conférence, animations, journées culturelles, expositions d'arts, géants concerts, etc.) et réservation de Pass (ticket) en ligne.</h2>
+          <h1 style="font-size: 30px;">Le meilleur endroit pour vous informer des événements disponibles au Benin</h1>
+          <h2><strong>AU-PROGRAMME</strong> vous informe des nouveaux événements disponibles au Benin tels que les géants concerts, soirées de gala, séances photos, animations artistiques et culturelles, les conférences, les formations professionnelles etc.) .</h2>
           <div style="display: flex;">
           <div style="margin-right: 7px;"><a href="#features" class="btn-get-started scrollto">Visitez</a></div>
-          <div><a href="events.html" class="btn-get-started scrollto btn-primary">Nos évènements</a></div>
+          <div><a href="events.html" class="btn-get-started scrollto btn-primary">Événement</a></div>
           </div>
         </div>
         <div class="col-xl-4 col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-in" data-aos-delay="150">
@@ -106,10 +106,22 @@
         <!-- ======= Features Section ======= -->
         <section id="features" class="features">
           <div class="container" data-aos="fade-up" id="apropos">
-    
             <div class="section-title">
               <h2>À propos</h2>
-              <p>une plateforme de vente de billets pour des événements en ligne au Bénin. Cette plateforme permet aux organisateurs d'événements de vendre des billets en ligne, offrant ainsi une solution pratique et sécurisée pour les acheteurs de billets.</p>
+              <section id="faq" class="faq" style="background-color: #4c6ef5;">
+                <div class="container" data-aos="fade-up">   
+                  <div class="faq-list">
+                    <ul>
+                      <li data-aos="fade-up" data-aos="fade-up" data-aos-delay="100">
+                         <a data-bs-toggle="collapse" class="collapse" data-bs-target="#faq-list-1">Avec<strong style="color: #4c6ef5;"> AU-PROGRAMME</strong>  à dieux à l'adage <strong style="color: #4c6ef5;">Mille regrets aux absents</strong> car vous serez toujours informés des événements. <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+                        <div id="faq-list-1" class="collapse show" data-bs-parent=".faq-list">
+                          <p>Cette plateforme permet aux organisateurs d'événements de vendre des billets en ligne, offrant ainsi une solution pratique et sécurisée pour les acheteurs de billets en ligne au Bénin.</p>
+                        </div>
+                      </li>               
+                    </ul>
+                  </div>        
+                </div>
+              </section><!-- End Frequently Asked Questions Section -->
             </div>
     
             <div class="row">
@@ -117,17 +129,17 @@
                 <div class="icon-box mt-5 mt-lg-0" data-aos="fade-up" data-aos-delay="100">
                   <i class="bx bx-receipt"></i>
                   <h4>Notre engagement</h4>
-                  <p>Nous sommes déterminés à fournir à nos clients des Tickets des évènement en ligne juste en un seul click à fin d'avoir accès à des meilleurs évènement au Bénin.</p>
+                  <p>Nous sommes déterminés à vous tenir informé de tous les événements disponibles au Benin, vous offrir un lieu sûr et convivial pour suivre  désormais des concerts, chambres de foires, conférences etc, et dire à dieux à l'adage Mille regrets aux absents car vous serez toujours informés des événements sur AU-PROGRAMME.</p>
                 </div>
                 <div class="icon-box mt-5" data-aos="fade-up" data-aos-delay="200">
                   <i class="bi bi-microsoft-teams"></i>
                   <h4>Collaboration</h4>
-                  <p>Nous sommes en collaboration avec plusieurs dans le domaine de l'événementiel afin de satisfaire pleinement nos clients.</p>
+                  <p>Nous sommes en collaboration avec des chefs et promoteurs d'événements, des maisons de disques, des promoteurs de bars, des artistes chanteurs et humoristes du Benin, des entreprises de communication, des centres de formation professionnels et des média en ligne.</p>
                 </div>
                 <div class="icon-box mt-5" data-aos="fade-up" data-aos-delay="300">
                   <i class="bi bi-wallet-fill"></i>
                   <h4>L'achat</h4>
-                  <p> Les utilisateurs peuvent payer pour les billets en ligne via différentes méthodes de paiement disponibles.</p>
+                  <p> AU-PROGRAMME vous donne une grande opportunité non seulement d'être informé des événements en cours, mais également vous permet de pouvoir réservé votre place aux événements grâce à son système de paiement sécurisé Kkia Pay ( MTN MOMO, MOOV MONEY, ORANGE, WAVE). Il offre une possibilité aux étrangers du Benin comme les résidents au Benin de pouvoir réserver leurs Pass (ticket simple et VIP) par une carte bancaire ou visa.</p>
                 </div>
                 <div class="icon-box mt-5" data-aos="fade-up" data-aos-delay="400">
                   <i class="bi bi-truck"></i>
@@ -678,9 +690,9 @@
             <h4>Les liens</h4>
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Accueil</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">À propos</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Evènements</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Contact</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#apropos">À propos</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="events.html">Evènements</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#contact">Contact</a></li>
             </ul>
           </div>
 
