--- a/events.html
+++ b/events.html
@@ -42,7 +42,7 @@
 
       <nav id="navbar" class="navbar" >
         <ul>
-          <li><a class="nav-link scrollto active" href="index.html">Accueil</a></li>
+          <li><a class="nav-link scrollto" href="index.html">Accueil</a></li>
           <li><a class="nav-link scrollto" href="index.html#apropos">À propos</a></li>
           <li><a class="nav-link scrollto " href="#eventstiket">Événement</a></li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
@@ -61,8 +61,8 @@
     <!-- ======= Portfolio Section ======= -->
     <section id="portfolio" class="portfolio" style="background-color: rgb(126, 126, 228);">
       <div id="eventstiket">
-      <div class="container" data-aos="fade-up">
-        <section id="faq" class="faq" >
+      <div class="container" data-aos="fade-up" id="evènements">
+        <section id="faq" class="faq">
             <div class="container" data-aos="fade-up">
       
               <div class="section-title">
@@ -71,16 +71,16 @@
               <div class="faq-list">
                 <ul>
                   <li data-aos="fade-up" data-aos="fade-up" data-aos-delay="100">
-                      <i class="bi bi-calendar2-check-fill icon-help" style="font-size: 16px;"></i><a data-bs-toggle="collapse" class="collapse" data-bs-target="#faq-list-1">Vivez les moments forts avec nos évènements <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+                      <i class="bi bi-calendar2-check-fill icon-help" style="font-size: 16px;"></i><a data-bs-toggle="collapse" class="collapse" data-bs-target="#faq-list-1">AVEC <strong style="color: #4c6ef5;">AU-PROGRAMME</strong>, VIVEZ LES MOMENTS FORTS DES ÉVÉNEMENTS DISPONIBLES AU BENIN.<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
                     <div id="faq-list-1" class="collapse show" data-bs-parent=".faq-list">
-                        <p>Nous permettons aux utilisateurs de rechercher les événements en fonction de différents critères tels que le type d'événement, le lieu, la date et le prix.</p>
+                        <p>Veuillez défiler vers l'événement qui vous plaît à assister.</p>
                     </div>
                   </li>               
                 </ul>
               </div>
       
             </div>
-          </section><!-- End Frequently Asked Questions Section -->
+        </section><!-- End Frequently Asked Questions Section -->
         <div data-aos="fade-up" data-aos-delay="200" class=" classFlexI"
         id="idtheAllProForsite">
         </div>
@@ -247,10 +247,10 @@
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Les liens</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Accueil</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">À propos</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Evènements</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Contact</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="index.html">Accueil</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="index.html#apropos">À propos</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#evènements">Evènements</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#contact">Contact</a></li>
             </ul>
           </div>
 
