--- a/events.html
+++ b/events.html
@@ -71,7 +71,7 @@
               <div class="faq-list">
                 <ul>
                   <li data-aos="fade-up" data-aos="fade-up" data-aos-delay="100">
-                      <i class="bi bi-calendar2-check-fill icon-help" style="font-size: 16px;"></i><a data-bs-toggle="collapse" class="collapse" data-bs-target="#faq-list-1">AVEC <strong style="color: #4c6ef5;">AU-PROGRAMME</strong>, VIVEZ LES MOMENTS FORTS DES ÉVÉNEMENTS DISPONIBLES AU BENIN.<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+                      <i class="bi bi-calendar2-check-fill icon-help" style="font-size: 16px;"></i><a data-bs-toggle="collapse" class="collapse" data-bs-target="#faq-list-1">Avec <strong style="color: #4c6ef5;">AU-PROGRAMME</strong>, Vivez les moments forts des événements au Bénin.<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
                     <div id="faq-list-1" class="collapse show" data-bs-parent=".faq-list">
                         <p>Veuillez défiler vers l'événement qui vous plaît à assister.</p>
                     </div>
