--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <div class="row justify-content-center">
         <div class="col-xl-5 col-lg-6 pt-3 pt-lg-0 order-2 order-lg-1 d-flex flex-column justify-content-center">
           <h1 style="font-size: 30px;">Le meilleur endroit pour vous informer des événements disponibles au Benin</h1>
-          <h2><strong>AU-PROGRAMME</strong> vous informe des nouveaux événements disponibles au Benin tels que les géants concerts, soirées de gala, séances photos, animations artistiques et culturelles, les conférences, les formations professionnelles etc.) .</h2>
+          <h2><strong>AU-PROGRAMME</strong> vous informe des nouveaux événements disponibles au Benin tels que les géants concerts, soirées de gala, séances photos, animations artistiques et culturelles, les conférences, les formations professionnelles etc.</h2>
           <div style="display: flex;">
           <div style="margin-right: 7px;"><a href="#features" class="btn-get-started scrollto">Visitez</a></div>
           <div><a href="events.html" class="btn-get-started scrollto btn-primary">Événement</a></div>
