--- a/events-details.html
+++ b/events-details.html
@@ -227,7 +227,7 @@
                         <li style="color: aliceblue;"><strong>Date de la fin</strong>: ${snapshot.val().Dateend} à ${snapshot.val().Hourend}</li><hr style="color: blue;">
                         <li style="color: aliceblue;"><strong>Lieu</strong>: ${snapshot.val().Category}</li><hr style="color: blue;">
                         <li style="color: aliceblue;"><strong>Prix VIP</strong>: <a href="#">${snapshot.val().Prix} FCFA</a></li><hr style="color: blue;">
-                        <li style="color: aliceblue;"><strong>Prix</strong>: <a href="#">${snapshot.val().PrixPromo} FCFA</a></li><hr style="color: blue;">
+                        <li style="color: aliceblue;"><strong>Prix Simple</strong>: <a href="#">${snapshot.val().PrixPromo} FCFA</a></li><hr style="color: blue;">
                       </ul>
                       <div id="faq" class="faq">
                       <div class="">
@@ -256,7 +256,7 @@
                         <!-- Toogle to second dialog -->
                         <button class="btn btn-danger myClasidpayer" data-bs-dismiss="modal" id="${snapshot.val().PrixPromo}"onclick="tacketselectid(this.id)">
                           <i class="bi bi-credit-card-fill"></i>
-                            Tiket</button><br>
+                            Tiket Simple</button><br>
                         <button class="btn btn-primary myClasidpayer" data-bs-dismiss="modal"
                           id="${snapshot.val().Prix}" onclick="tacketselectid(this.id)"> <i class="bi bi-credit-card-fill"></i> Tiket VIP</button>
                       </div>
