--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                   <div class="faq-list">
                     <ul>
                       <li data-aos="fade-up" data-aos="fade-up" data-aos-delay="100">
-                         <a data-bs-toggle="collapse" class="collapse" data-bs-target="#faq-list-1">Avec<strong style="color: #4c6ef5;"> AU-PROGRAMME</strong>  à dieux à l'adage <strong style="color: #4c6ef5;">Mille regrets aux absents</strong> car vous serez toujours informés des événements. <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+                         <a data-bs-toggle="collapse" class="collapse" data-bs-target="#faq-list-1">Avec<strong style="color: #4c6ef5;"> AU-PROGRAMME</strong>  à dieux l'adage <strong style="color: #4c6ef5;">Mille regrets aux absents</strong>. Car vous serez toujours informés des événements disponibles au Bénin. <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
                         <div id="faq-list-1" class="collapse show" data-bs-parent=".faq-list">
                           <p>Cette plateforme permet aux organisateurs d'événements de vendre des billets en ligne, offrant ainsi une solution pratique et sécurisée pour les acheteurs de billets en ligne au Bénin.</p>
                         </div>
@@ -168,7 +168,7 @@
 
           <div class="col-lg-3 col-6 text-center">
             <span data-purecounter-start="0" data-purecounter-end="521" data-purecounter-duration="1" class="purecounter"></span>
-            <p>Événement</p>
+            <p>Événements</p>
           </div>
 
           <div class="col-lg-3 col-6 text-center">
