--- a/admin/admin.html
+++ b/admin/admin.html
@@ -188,7 +188,7 @@
                                                 <input type="file" class="form-control" id="recipient-name2">
                                                 <label for="recipient-name" class="col-form-label">Prix VIP:</label>
                                                 <input type="tel" class="form-control" id="recipient-name3">
-                                                <label for="recipient-name" class="col-form-label">Prix:</label>
+                                                <label for="recipient-name" class="col-form-label">Prix: Simple</label>
                                                 <input type="tel" class="form-control" id="recipient-name4">
                                                 <label for="recipient-name" class="col-form-label">Le lieu de l'evènement:</label>
                                                 <input type="text" class="form-control" id="exampleFormControlSelect1">
