team template add

--- a/events-details.html
+++ b/events-details.html
@@ -40,6 +40,7 @@
               <li><a class="nav-link scrollto active" href="index.html">Accueil</a></li>
               <li><a class="nav-link scrollto" href="index.html#features">À propos</a></li>
               <li><a class="nav-link scrollto " href="index.html#eventstiket">Evènements</a></li>
+              <li><a class="nav-link scrollto " href="index.html#equipe">Équipe</a></li>
               <li><a class="nav-link scrollto" href="index.html#contact">Contact</a></li>
               <li><a class="getstarted scrollto" href="#features">Commencer</a></li>
             </ul>
@@ -122,10 +123,10 @@
         <div class="copyright-wrap d-md-flex py-4">
           <div class="me-md-auto text-center text-md-start">
             <div class="copyright">
-              &copy; Copyright <strong><span>BeCare</span></strong>. All Rights Reserved
+              &copy; Copyright <strong><span>AU-PROGRAMME</span></strong>. All Rights Reserved
             </div>
             <div class="credits">
-              Designed by <a href="https://bootstrapmade.com/">BeCare</a>
+              Designed by <a href="https://bootstrapmade.com/">AU-PROGRAMME</a>
             </div>
           </div>
           <div class="social-links text-center text-md-right pt-3 pt-md-0">
