--- a/events.html
+++ b/events.html
@@ -45,6 +45,7 @@
           <li><a class="nav-link scrollto" href="index.html">Accueil</a></li>
           <li><a class="nav-link scrollto" href="index.html#apropos">À propos</a></li>
           <li><a class="nav-link scrollto " href="#eventstiket">Événement</a></li>
+          <li><a class="nav-link scrollto " href="index.html#equipe">Équipe</a></li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
           <li><a class="getstarted scrollto" href="#features">Commencer</a></li>
         </ul>
@@ -270,10 +271,10 @@
       <div class="copyright-wrap d-md-flex py-4">
         <div class="me-md-auto text-center text-md-start">
           <div class="copyright">
-            &copy; Copyright <strong><span>BeCare</span></strong>. All Rights Reserved
+            &copy; Copyright <strong><span>AU-PROGRAMME</span></strong>. All Rights Reserved
           </div>
           <div class="credits">
-            Designed by <a href="https://bootstrapmade.com/">BeCare</a>
+            Designed by <a href="https://bootstrapmade.com/">AU-PROGRAMME</a>
           </div>
         </div>
         <div class="social-links text-center text-md-right pt-3 pt-md-0">
