--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
           <li><a class="nav-link scrollto active" href="#home">Accueil</a></li>
           <li><a class="nav-link scrollto" href="#apropos">À propos</a></li>
           <li><a class="nav-link scrollto " href="events.html">Événement</a></li>
+          <li><a class="nav-link scrollto " href="#equipe">Équipe</a></li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
           <li><a class="getstarted scrollto" href="#features">Commencer</a></li>
         </ul>
@@ -532,6 +533,8 @@
 
       </div>
     </section><!-- End Frequently Asked Questions Section -->
+    <iframe src="team/team.html" width="100%" height="850px" id="equipe"> 
+    </iframe>
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact section-bg">
@@ -712,10 +715,10 @@
       <div class="copyright-wrap d-md-flex py-4">
         <div class="me-md-auto text-center text-md-start">
           <div class="copyright">
-            &copy; Copyright <strong><span>BeCare</span></strong>. All Rights Reserved
+            &copy; Copyright <strong><span>AU-PROGRAMME</span></strong>. All Rights Reserved
           </div>
           <div class="credits">
-            Designed by <a href="https://bootstrapmade.com/">BeCare</a>
+            Designed by <a href="https://bootstrapmade.com/">AU-PROGRAMME</a>
           </div>
         </div>
         <div class="social-links text-center text-md-right pt-3 pt-md-0">
